[MIN] Cleanups (IntelliJ)