@@ -1,7 +1,5 @@
 package org.basex.query.func.fn;
 
-import java.util.stream.*;
-
 import org.basex.query.*;
 import org.basex.query.func.*;
 import org.basex.query.value.*;
@@ -18,8 +16,8 @@ public final class FnAvailableEnvironmentVariables extends StandardFunc {
   @Override
   public Value value(final QueryContext qc) {
     final TokenList tl = new TokenList();
-    for(final Object o : System.getenv().keySet().stream().sorted().collect(Collectors.toList())) {
-      tl.add(o.toString());
+    for(final Object key : System.getenv().keySet().stream().sorted().toList()) {
+      tl.add(key.toString());
     }
     return StrSeq.get(tl);
   }
